<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity  = "center"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <ImageView
        android:id = "@+id/profile_image_view"
        android:layout_width = "160dp"
        android:layout_height = "160dp"
        android:background = "@drawable/circular_background"
        android:backgroundTint = "@color/myPrimaryColor"
        android:src = "@drawable/person_icon"
        android:layout_marginBottom = "40dp"
        android:scaleType =  "centerCrop">

    </ImageView>
    <EditText
        android:id="@+id/profile_edit_text_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin = "20dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />
    <EditText
        android:id="@+id/profile_edit_text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin = "20dp"
        android:background="@drawable/edit_text_rounded_corner"
        android:elevation="5dp"
        android:hint="@string/phone"
        android:enabled = "false"
        android:inputType="phone"
        android:padding="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop = "20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"


        >

        <Button
            android:id="@+id/btn_updateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/update_profile"

            />

        <ProgressBar
            android:id="@+id/profilePb"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:indeterminateTint="@color/myPrimaryColor" />

    </LinearLayout>
    <TextView
        android:id="@+id/btnLogout"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text =  "@string/logout" />

</LinearLayout>