<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".LoginUsernameActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_background"
            android:backgroundTint="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/step_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"


                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_background"

            android:backgroundTint="@color/gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/step_2"
                android:textColor="@color/white"
                android:textSize="18sp"


                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:background="@drawable/circular_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/step_3"
                android:textColor="@color/white"
                android:textSize="18sp"


                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>

    <ImageView

        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_weight="20"
        android:src="@drawable/person_icon"
        app:tint="@color/myPrimaryColor"


        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="5"
        android:letterSpacing="0.08"
        android:text="@string/enter_username"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/edtxUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="20"
        android:gravity="center_vertical"
        android:orientation="vertical"


        >

        <Button
            android:id="@+id/btn_letmeIn"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/let_me_in"


            />

        <ProgressBar
            android:id="@+id/usernamePb"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:indeterminateTint="@color/myPrimaryColor" />

    </LinearLayout>


</LinearLayout>